--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,11 +1,9 @@
 name: Update README
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight
+    - cron: '9 */6 * * *'
 
 jobs:
   update-readme:
