--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -45,6 +45,7 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add README.md
           git commit -m "Updated day count to $day_count and fun metric to $fun_metric%"
+          git pull --rebase origin main
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
