--- a/.github/workflows/funUpdate.yml
+++ b/.github/workflows/funUpdate.yml
@@ -2,7 +2,7 @@ name: Update Fun Tracker
 
 on:
   schedule:
-    - cron: '*/1 * * * *' # Runs every minute
+    - cron: '0 0 * * *' # Runs daily at midnight
 
 jobs:
   update-fun-tracker:
