--- a/.github/workflows/funUpdate.yml
+++ b/.github/workflows/funUpdate.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.name "flitzcore"
+          git config user.email "hemistergt@gmail.com"
           git add README.md
           git commit -m "Updated day count to $day_count and fun metric to $fun_metric%"
           git push
